--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,38 @@ scipy==1.11.1
 jupyter>=1.0.0
 ipykernel>=6.0.0
 ipywidgets>=7.0.0  # For interactive widgets if needed
+
+
+# Web Framework
+Flask==2.3.3
+Flask-CORS==4.0.0
+
+# Computer Vision and Image Processing
+opencv-python==4.8.1.78
+numpy==1.24.3
+Pillow==10.0.1
+
+# Database
+pymongo==4.5.0
+gridfs==0.0.1
+
+# HTTP Requests (for movie poster fetching)
+requests==2.31.0
+
+# Machine Learning and Emotion Detection
+tensorflow==2.13.0
+keras==2.13.1
+scikit-learn==1.3.0
+
+# Data Processing
+pandas==2.0.3
+
+# Additional utilities that might be needed
+python-dateutil==2.8.2
+bson==0.5.10
+
+# Optional: For better performance
+gunicorn==21.2.0
+
+# Optional: For development
+python-dotenv==1.0.0
